@@ -1,3 +1,11 @@
+2010-10-15  Alex Harsanyi  <AlexHarsanyi@gmail.com>
+
+	* soap-client.el (*soap-encoded-namespaces*): doc update
+	(soap-encode-value): ensure XML-TAG is a string before passing it
+	on to the encoders.  Also doc update and param order change.
+	(soap-encode-basic-type, soap-encode-sequence-type)
+	(soap-encode-array-type): assume XML-TAG is a string
+
 2010-10-13  Alex Harsanyi  <AlexHarsanyi@gmail.com>
 
 	* soap-client.el (soap-default-soapenc-types): new function
